# personal-finance-desktop

./: .gitignore  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_add_transactions.sql  003_add_points.sql  004_add_activities.sql  005_add_currency_settings.sql  006_update_usd_cny_rate.sql  007_add_credit_card_fields.sql  008_add_subscriptions.sql  009_add_budgets.sql
src-tauri/src/: lib.rs  main.rs
src/layouts/: AppLayout.vue
src/pages/: Accounts.vue  Activities.vue  Budgets.vue  Dashboard.vue  Points.vue  Reports.vue  Settings.vue  Subscriptions.vue  Transactions.vue
src/router/: index.ts
src/services/: accountService.ts  activityService.ts  budgetService.ts  currencyService.ts  dashboardService.ts  db.ts  fileExportService.ts  pointService.ts  reportService.ts  settingsService.ts  subscriptionService.ts  transactionService.ts
src/stores/: app.ts
src/types/: account.ts  activity.ts  budget.ts  currency.ts  dashboard.ts  points.ts  report.ts  settings.ts  subscription.ts  transaction.ts
